# algorithmic_trading

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml  live.yaml  paper.yaml  risk.yaml
config/signal_sources/: arena_monitor.yaml
config/strategies/: leaderboard_alpha.yaml
scripts/: agent_verify.sh  backtest.py  docker_dev_loop.sh
src/autotrader/: __init__.py  main.py
src/autotrader/api/: __init__.py  client.py  websocket.py
src/autotrader/backtest/: replay.py
src/autotrader/config/: __init__.py  loader.py  models.py
src/autotrader/core/: __init__.py  loop.py
src/autotrader/execution/: __init__.py  engine.py
src/autotrader/monitoring/: __init__.py  discord.py  logging.py  metrics.py
src/autotrader/preflight/: __init__.py  markets.py
src/autotrader/risk/: __init__.py  manager.py
src/autotrader/signals/: __init__.py  arena_monitor.py  (+4 more)
tests/fixtures/: arena_leaderboard.csv  arena_leaderboard.html  arena_leaderboard.json  arena_leaderboard_nested.html  arena_leaderboard_with_release_dates.csv  arena_leaderboard_with_release_dates.html  arena_leaderboard_wrapped.html  arena_next_data.html  kalshi_markets_snapshot.json
tests/integration/: test_kalshi_api.py
tests/unit/: test_api_client.py  test_arena_monitor.py  test_arena_parser.py  test_config.py  test_contract_mapping.py  test_database.py  test_execution_engine.py  test_fees.py  test_leaderboard_alpha.py  test_logging.py  test_main_preflight.py  test_matching.py  test_metrics.py  test_preflight_markets.py  test_replay.py  test_repository.py  test_risk_manager.py  test_settlement.py  test_signal_sources_config.py  test_trading_loop.py  test_websocket.py
(+10 files in other folders)
